--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- main image -->
         <div class="mt-20 h-[0px] relative z-[-1] w-[90%] h-[600px] mx-auto">
             <!-- banner-image -->
-            <img class="w-full h-full object-center object-cover rounded-md static" src="IMAGES/aerial-view-business-people-brainstorming-together.jpg" alt="...">
+            <img class="w-full h-full object-center object-cover rounded-md static" src="aerial-view-business-people-brainstorming-together.jpg" alt="...">
             <div class="absolute z-[8] top-1/4 max-w-[90%] sm:max-w-none">
                 <h1 class="text-3xl sm:text-6xl font-bold text-white px-5 sm:px-10" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.7)">
                     We're Hiring!<br>
@@ -48,7 +48,7 @@
             <p class="text-lg text-indigo-950">
                 let's build,innovate,and,grow together
             </p>
-            <img src="IMAGES/successfulbusinessman.jpg" height="250" width="250" alt="..." class="rounded-md h-[200px] sm:h-[250px] w-auto">
+            <img src="successfulbusinessman.jpg" height="250" width="250" alt="..." class="rounded-md h-[200px] sm:h-[250px] w-auto">
             <span class="w-[140px] h-[44px] text-center py-2 rounded-md bg-indigo-950 text-white inline-flex items-center justify-center">
                 Apply Now
             </span>
@@ -62,11 +62,11 @@
             <div class="w-full sm:w-[750px] mt-10 overflow-hidden relative mx-auto">
                 <!-- Images wrapper -->
                 <div id="carousel" class="flex gap-2 transition-transform duration-500 ease-in-out">
-                    <img src="IMAGES/indian-businessman-with-his-white-car.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
-                    <img src="IMAGES/portrait-young-indian-top-manager-t-shirt-tie-crossed-arms-smiling-white-isolated-wall.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
-                    <img src="IMAGES/smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
-                    <img src="IMAGES/successfulbusinessman.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
-                    <img src="IMAGES/young-tender-curly-girl-holding-documents.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
+                    <img src="indian-businessman-with-his-white-car.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
+                    <img src="portrait-young-indian-top-manager-t-shirt-tie-crossed-arms-smiling-white-isolated-wall.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
+                    <img src="smiley-businesswoman-posing-outdoors-with-arms-crossed-copy-space.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
+                    <img src="successfulbusinessman.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
+                    <img src="young-tender-curly-girl-holding-documents.jpg" class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 h-[250px] object-cover" />
                 </div>
                 <!-- Left arrow -->
                 <button id="prev" class="absolute top-1/2 left-2 -translate-y-1/2 bg-black/50 text-white px-3 py-1 rounded-full">
@@ -116,8 +116,8 @@
 
             <!-- team image -->
             <div class="flex justify-center gap-4 sm:gap-8 mt-8 flex-wrap">
-                <img src="IMAGES/pexels-henri-mathieu-8348627.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
-                <img src="IMAGES/pexels-fauxels-3184422.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
+                <img src="pexels-henri-mathieu-8348627.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
+                <img src="pexels-fauxels-3184422.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
             </div>
 
             <div class="border-t border-b border-gray-300 w-full sm:w-[70%] mx-auto min-h-[100px] mt-[50px] py-4 px-3">
@@ -373,3 +373,4 @@
     </script>
 </body>
 </html>
+
