--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- team image -->
             <div class="flex justify-center gap-4 sm:gap-8 mt-8 flex-wrap">
                 <img src="IMAGES/pexels-henri-mathieu-8348627.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
-                <img src="IMAGES/pexels-fauxels-3184422.jpg" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
+                <img src="IMAGES/pexels-fauxels-3184422.webp" alt="" class="w-full sm:w-[300px] h-[200px] object-cover rounded">
             </div>
 
             <div class="border-t border-b border-gray-300 w-full sm:w-[70%] mx-auto min-h-[100px] mt-[50px] py-4 px-3">
